--- a/admin.css
+++ b/admin.css
@@ -16,6 +16,8 @@ button { padding:6px 10px; margin:2px; font-size:14px; }
   height:1000px; /* 100mをpx換算 */
   background:#ddd;
   transform-origin:top left;
+
+    cursor: crosshair;
 }
 .rod {
   position:absolute;
