--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1 {
   margin: auto;
   overflow: hidden;
   border-radius: 10px;
-  background: #bfbfbf;
+  background: #FFF8E1;
   cursor: crosshair;
 }
 #parking-lot {
