--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  background: #cfcfcf;
+  background: #ccff9c;
   padding: 8px;
   margin: 0;
   text-align: center;
